# oculii_radar_driver

./: CMakeLists.txt  config.xml
include/: radar_system.h
install_dependencies/linux/: RUN_ME.sh
src/: main_driver.cpp  projection_sys_test.cpp
